modified the button to undergo animation upon click, corrected the overflow of the text

--- a/scss/_animations.scss
+++ b/scss/_animations.scss
@@ -8,6 +8,8 @@ main .advice{
     animation-direction: alternate;
 }
 
+
+
 @keyframes shinyText {
     from{
         text-shadow: 0px 0px 0px;
@@ -30,11 +32,9 @@ main .advice{
     }
 }
 
-
-button:active,
-button:hover{
+.button-animate{
     animation-name: buttonAnimation;
     animation-duration: 1s;
     animation-direction: reverse;
-
 }
+
