--- a/scss/main.scss
+++ b/scss/main.scss
@@ -23,6 +23,9 @@ main{
 
     }
     .advice{
+        overflow: hidden;
+        white-space: normal;
+        word-break: break-all;
         text-align: center;
     }
 
